force-app/main/default/objects/Engagement_LOB_Split__c/Engagement_LOB_Split__c.object-meta.xml
<CustomObject>
    <description>Stores the calculated LOB Splits per Engagement</description>
    <label>Engagement LOB Split</label>
    <nameField>
        <displayFormat>ELS-{00000000}</displayFormat>
        <label>Engagement LOB Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement LOB Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>