force-app/main/default/objects/Engagement_LOB_Split__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Line of Business</description>
    <label>LOB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>