force-app/main/default/objects/Engagement_LOB_Split__c/fields/LOB_Split__c.field-meta.xml
<CustomField>
    <fullName>LOB_Split__c</fullName>
    <description>LOB Split Percentage</description>
    <label>LOB Split</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>