force-app/main/default/objects/Engagement_LOB_Split__c/fields/LOB_Split_Override_Percent__c.field-meta.xml
<CustomField>
    <fullName>LOB_Split_Override_Percent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Override Percentage Value</description>
    <inlineHelpText>If override value is no longer needed, be sure to clear the value and do not set to 0</inlineHelpText>
    <label>LOB Split Override Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>