force-app/main/default/objects/Engagement_LOB_Split__c/fields/LOB_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>LOB_Split_Percent__c</fullName>
    <description>LOB Split - Formatted to real percent number</description>
    <formula>LOB_Split__c * 100.0</formula>
    <label>LOB Split Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>